# Semantics

./: .coveragerc  .gitignore  Design.md  LICENSE.md  Locking Rules.md  Patterns.md  README.md  Schema.md  TODO.md  scratch.md  setup.cfg  view_coverage.sh
.github/workflows/: codeql-analysis.yml  pylint.yml  unittests.yml
docs/: Coordinates.md  Goals, Actions, and Causality.md  Natural Language Programming.md  Patterns.md  TODO.md  Triggers.md  scratch.md
semantics/data_control/: base.py  controllers.py  interface.py  transactions.py
semantics/data_structs/: controller_data.py  element_data.py  interface.py  operation_contexts.py  transaction_data.py
semantics/data_types/: allocators.py  comparable.py  data_access.py  exceptions.py  indices.py  language_ids.py  languages.py  set_unions.py  typedefs.py
semantics/graph_layer/: connections.py  elements.py  graph_db.py  interface.py
semantics/kb_layer/: builtin_labels.py  builtin_patterns.py  builtin_roles.py  connections.py  evidence.py  hook_registry.py  interface.py  knowledge_base.py  orm.py  schema.py  schema_attributes.py  schema_registry.py  trigger_queues.py
semantics/visualization/: explorer.py
test_semantics/: test_import_cycles.py  test_integration.py
test_semantics/test_data_control/: __init__.py  base.py  test_controllers.py  test_interface.py  test_transactions.py
test_semantics/test_data_structs/: base.py  test_controller_data.py  test_element_data.py  test_interface.py  test_operation_contexts.py  test_transaction_data.py
test_semantics/test_data_types/: base.py  test_allocators.py  (+4 more)
(+43 files in other folders)
