[metadata]
name = semantics_nlu
version = 0.0
author = Aaron Hosford
author_email = hosford42@gmail.com
description = A Python library for modeling the semantics of natural language
long_description = file: README.md
long_description_content_type = text/markdown
keywords = NLP, NLU, natural language, database, knowledge base, knowledge graph, semantic
license = GNU LESSER GENERAL PUBLIC LICENSE Version 2.1
url = https://github.com/hosford42/Semantics
project_urls =
    Bug Tracker = https://github.com/hosford42/Semantics/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Database
    Topic :: Scientific/Engineering :: Human Machine Interfaces

[options]
packages = find:
python_requires = >=3.8
install_requires =
    iso639

[options.packages.find]
where = .
exclude =
    test_semantics
    test_semantics.*

